Update issue 6170 Work on popup.  - Wrapped all .js in a single $(function(){}).  - Moved all inline styles into .css file.  - Generate entire iframe the moment it's requested, rather than having    an empty iframe sits around, which makes CSP generate an error about    loading about:blank.
Unfortunately, I'm still getting 5 style CSP errors which I bet are due
to jQuery.

svn path=/branches/issue-6170/; revision=3492

--- a/src/button/popup.css
+++ b/src/button/popup.css
@@ -4,6 +4,27 @@ body {
   margin: 0px;
 }
 
+// classes necessary due to CSP
+.initially-hidden {
+  display: none;
+}
+.float-right {
+  float: right;
+}
+.float-left {
+  float: left;
+}
+.clear-left {
+  clear: left;
+}
+.italic {
+  font-style: italic;
+}
+
+#pay_inner {
+  margin: 5px 0;
+}
+
 #wrapper { 
   margin: 0px 0px;
   width: 240px;
